# kubeintellect

./: .env.example  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE-COMMERCIAL.md  Makefile  README.md  docker-compose.yaml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  tool_request.yml
.github/workflows/: deploy.yml  docker-ghcr.yml  docs.yml  publish.yml
.github/workflows_disabled/: ci.yml  deploy.yml  publish.yml
app/: cli.py  main.py
app/agent/: hitl.py  state.py  workflow.py
app/agent/nodes/: context_fetcher.py  coordinator.py  memory_loader.py  subagent.py
app/agent/playbooks/: __init__.py  containercreating_stuck.yaml  crashloopbackoff.yaml  createcontainerconfigerror.yaml  imagepullbackoff.yaml  loader.py  oomkilled.yaml  pending_resources.yaml  pending_scheduling.yaml  readiness_probe_failing.yaml  service_unreachable.yaml  terminating_stuck.yaml
app/agents/tools/: code_generator_tools.py  kubernetes_tools.py  tool_organization.py
app/api/: middleware.py
app/api/v1/: auth.py  debug_middleware.py  router.py  routers.py
app/core/: config.py  llm.py  llm_gateway.py
app/db/: audit.py  memory_store.py  schema.sql
app/mcp/: server.py
app/models/: failure_pattern.py  schemas.py
app/modules/: query_processor.py
app/orchestration/: agents.py  diagnostics.py  routing.py  schemas.py  state.py  tool_loader.py  workflow.py
app/services/: conversation_context_service.py  failure_pattern_service.py  github_pr_service.py  kubernetes_service.py  llm_service.py  memory_orchestrator.py  reflection_memory_service.py  tool_output_summarizer.py  tool_registry_service.py  tool_storage_service.py  user_preference_service.py
app/streaming/: emitter.py
app/tools/: kubectl_errors.py  kubectl_tool.py  loki_tool.py  prometheus_tool.py  registry.py
app/utils/: ast_validator.py  code_security.py  logger.py  logger_config.py  metrics.py  otel_guard.py  postgres_checkpointer.py  reflexion.py  self_refine.py  ssh_tunnel_manager.py  utils.py
charts/kubeintellect/: .helmignore  Chart.yaml  values-azure.yaml  values-kind-dev.yaml  values-kind.yaml  values.yaml
charts/kubeintellect/templates/: NOTES.txt  _helpers.tpl  cluster-issuer.yaml  configmaps.yaml  deployments.yaml  exporters.yaml  external-secrets.yaml  gdpr-retention.yaml  hpa.yaml  ingress.yaml  job-migrate.yaml  langfuse.yaml  namespace.yaml  persistentvolumes.yaml  pg-backup-cronjob.yaml  pvcs.yaml  rbac.yaml  secret-store.yaml  (+5 more)
deploy/kind/: ingress-values.yaml  kind-config-local.yaml  kind-config-vm.yaml  loki-values.yaml  monitoring-values.yaml
docs/: CNAME  agent-behaviors.md  configuration.md  index.md  installation.md  kubernetes-ai-debugging.md  llms.txt  package-management.md  quickstart.md  robots.txt  runbook.md  secret-management.md  security.md
docs/demos/: README.md
docs/deploy/: cloud.md  docker-compose.md  image.md  kind.md
docs/flowcharts/: codegenerator-synthesis-pipeline.mermaid  figure1_arch_mermaid.mermaid  supervisor-workflow.mermaid
docs/install/: existing-cluster.md  kind.md  no-cluster.md
docs/stylesheets/: extra.css
docs/v1/: architecture.md  concurrency.md  development.md  gdpr.md  hitl.md  observability.md  security-model.md
infrastructure/azure/: README.md  azure-cluster-cleanup.sh  azure-cluster-create.sh  main.tf  outputs.tf  setup_aks_env.sh  terraform.tfvars.example  validate-environment.sh  variables.tf
infrastructure/kind/: Dockerfile  ingress-values.yaml  kind-2node.yaml.template
k8s/observability/: event-exporter.yaml
overrides/: main.html
scripts/: README.md  setup.sh
scripts/azure/: azure-deploy-kubeintellect.sh  fetch-secrets.sh  setup-certificates.sh
scripts/dev/: generate-kind-secrets.sh  log-pipeline.conf  log-watcher.sh  test-watch.sh
scripts/kind/: cleanup-kind-cluster.sh  create-dev-user.sh  create-kind-cluster.sh
scripts/migrations/: 002_import_registry_json.py
scripts/onprem/: access-librechat-remote.sh  configure-ingress-access.sh
scripts/ops/: cleanup-kubeintellect.sh  export_chat_logs.sh  lint-helm-values.sh  logo.sh  map_ingress_ip.sh  pv_set_retain.sh  setup-secrets-infra.sh
scripts/restore/: mongo-restore.sh  postgres-restore.sh  pvc-restore.sh
scripts/vm/: setup-nginx.sh  setup-tls.sh
tests/: conftest.py  test_agent_routing_tool_assignment.py  test_api.py  test_chat_validation.py  test_cli_render.py  test_context_fetcher.py  test_coordinator.py  test_hitl_session.py  test_hitl_sse_schema.py  test_kubectl_errors.py  test_kubectl_tool.py  test_llm_gateway_streaming.py  test_multistep_planning.py  test_otel_noise_suppression.py  test_playbooks.py  test_query_processor.py  test_routing_corpus.py  test_runtime_safety_bugs.py  test_tool_output_summarizer.py  test_tool_registry.py  test_tools_typed_outputs.py  test_user_preference_service.py  test_v2_phase1_tools.py
tests/investigate/: analyze_trace.py  run_query.sh
(+76 files in other folders)
